# avi2smk

./: .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  codex.md
.github/workflows/: cmake.yml
lib/avi/: decoder.cpp  decoder.hpp  encoder.cpp  encoder.hpp
lib/smk/: decoder.cpp  decoder.hpp  encoder.cpp  encoder.hpp
src/: avi2smk.cpp  smk2avi.cpp
tests/: test_bitstream.cpp  test_huffman.cpp  test_palette.cpp  util.hpp
